# planet-auth-python

./: .gitignore  CONTRIBUTING.md  README.md  RELEASE.md  mkdocs.yml  noxfile.py  pyproject.toml  version-with-buildnum.txt
.github/actions/python-build-env-setup/: action.yml
.github/actions/python-common-setup/: action.yml
.github/actions/version-dot-buildnum/: action.yml
.github/actions/version-dot-buildnum-fetch/: action.yml
.github/actions/version-dot-buildnum-generate/: action.yml
.github/workflows/: release-build.yml  release-orchestrate.yml  release-publish.yml  release-scratch.yml  release-trigger.yml  release.yml  test.yml
docs/: README-pkg.md  changelog.md  cli-plauth.md  configuration.md  examples-cli.md  examples-client.md  examples.md  gen-api.sh  index.md  readme.md
docs/examples/auth-client/oauth/: initialize-client-lib-on-disk-profile.py
docs/examples/auth-client/planet-legacy/: make-legacy-authenticated-requests-request.py  perform-legacy-initial-login.py
docs/examples/cli/: embed-plauth-click.py
docs/examples/service/: flask--oidc-multi-issuer--local-only-validation.py
docs/scripts/: gen_api_pages.py
src/planet_auth/: __init__.py  auth.py  auth_client.py  constants.py  credential.py  request_authenticator.py  storage_utils.py  util.py
src/planet_auth/logging/: auth_logger.py
src/planet_auth/none/: noop_auth.py
src/planet_auth/oidc/: auth_client.py  auth_client_default_authenticators.py  auth_client_with_client_pubkey.py  multi_validator.py  oauth_request_auth_enrichers.py  oidc_credential.py  request_authenticator.py  token_validator.py
src/planet_auth/oidc/api_clients/: api_client.py  authorization_api_client.py  device_authorization_api_client.py  discovery_api_client.py  dynamic_client_registration_client.py  http_debug.py  introspect_api_client.py  jwks_api_client.py  revocation_api_client.py  token_api_client.py  userinfo_api_client.py
src/planet_auth/oidc/auth_clients/: auth_code_flow.py  client_credentials_flow.py  client_validator.py  device_code_flow.py  resource_owner_flow.py
src/planet_auth/planet_legacy/: auth_client.py  legacy_api_key.py  request_authenticator.py
src/planet_auth/static_api_key/: auth_client.py  static_api_key.py
src/planet_auth_config_injection/: __init__.py  builtins_provider.py
src/planet_auth_utils/: __init__.py  builtins.py  builtins_provider.py  constants.py  plauth_factory.py  plauth_user_config.py  profile.py
src/planet_auth_utils/commands/cli/: jwt_cmd.py  main.py  oauth_cmd.py  options.py  planet_legacy_auth_cmd.py  profile_cmd.py  prompts.py  util.py
tests/test_planet_auth/: util.py
tests/test_planet_auth/data/auth_client_configs/live_service/: okta_test_pkce_auth_code.json
tests/test_planet_auth/live_service/auth/auth_clients/oidc/: test_all_oidc_clients_live.py
tests/test_planet_auth/unit/auth/: test_auth.py  test_credential.py  test_resources.py  test_util_file_backed_json_object.py  util.py
tests/test_planet_auth/unit/auth/auth_clients/: test_auth_client_baseclass.py
tests/test_planet_auth/unit/auth/auth_clients/oidc/: test_multi_validator.py  test_oidc_auth_client_baseclass.py  test_oidc_request_authenticator.py  test_oidc_token_credential.py  test_token_validator.py
tests/test_planet_auth/unit/auth/auth_clients/oidc/api_clients/: test_api_client_base.py  test_dynamic_client_registration_client.py  test_token_api_client.py
tests/test_planet_auth/unit/auth/auth_clients/oidc/auth_clients/: test_device_code.py
tests/test_planet_auth/unit/auth/auth_clients/planet_legacy/: test_legacy_api_key_credential.py  test_planet_legacy_request_authenticator.py
tests/test_planet_auth/unit/auth/auth_clients/static_api_key/: test_static_api_key_credential.py  test_static_api_key_request_authenticator.py
tests/test_planet_auth_utils/: util.py
tests/test_planet_auth_utils/unit/auth_utils/: test_builtins.py  test_plauth_factory.py  test_profile.py  utest_builtins.py
tests/test_planet_auth_utils/unit/commands/plauth_cli/: test_cli_cmds.py
